--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rxq-add-ons",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Add on operators for RxQ",
   "main": "_cjs/index.js",
   "module": "_esm5/index.js",
@@ -10,17 +10,20 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "webpack": "^3.6.0"
   },
   "scripts": {
     "generate-index": "node scripts/generate-index",
     "compile-cjs": "node scripts/compile-cjs",
     "compile-esm5": "node scripts/compile-esm5",
     "make-packages": "node scripts/make-packages",
-    "build-release": "npm run generate-index && npm run compile-cjs && npm run compile-esm5 && npm run make-packages"
+    "browser-bundle": "webpack && webpack --env.minimize true",
+    "build-release": "npm run generate-index && npm run compile-cjs && npm run compile-esm5 && npm run make-packages && npm run browser-bundle"
   },
   "repository": {
     "type": "git",
